fixing bug in mapping entity to domain or domain to entity - creating the client service for creatring new clients - implemmenting client repositories